--- a/config.toml
+++ b/config.toml
@@ -31,6 +31,16 @@ weight = 4
     endLevel = 4
     ordered = false
     startLevel = 2
+  [markup.highlight]
+    codeFences = true
+    guessSyntax = true
+    hl_Lines = ""
+    lineNoStart = 1
+    lineNos = true
+    lineNumbersInTable = true
+    noClasses = true
+    style = "perldoc"
+    tabWidth = 4
 
 [params]
 
@@ -41,7 +51,7 @@ weight = 4
   css = ["css/custom.css"]
 
   # Home page settings
-  description = "Hi! My name is Lauren Arnett. I am a computer programmer living in NYC. I also tutor programming to kids."
+  description = "Hello! My name is Lauren Arnett. I am a computer programmer living in NYC interested in backend development. I'm currently in a batch at [Recurse Center](https://www.recurse.com/), where I'm focusing on studying Haskell, distributed systems, and SIMD parallelism. \n\n I also tutor programming to kids virtually and am happy to talk to new interested students!"
 
   mainSection = "posts" # your main section
   showAllPostsOnHomePage = false # default
@@ -71,3 +81,4 @@ weight = 4
   [[params.social]]
     name = "email"
     link = "example@example.com"  # no need for "mailto:" in the head
+
