--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/ink"]
 	path = themes/ink
 	url = https://github.com/laurenarnett/hugo-ink.git
+[submodule "themes/cactus"]
+	path = themes/cactus
+	url = git@github.com:monkeyWzr/hugo-theme-cactus.git
