--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,6 @@
-baseURL = "http://example.org/"
+baseURL = "https://laurenar.net/"
 languageCode = "en-us"
 title = "Lauren's Blog"
-
 
 theme = "cactus"
 
@@ -22,8 +21,8 @@ url = "/tags"
 weight = 3
 
 [[menu.main]]
-name = "About"
-url = "/about"
+name = "Projects"
+url = "/projects"
 weight = 4
 
 [markup]
@@ -54,10 +53,10 @@ weight = 4
   description = "Hello! My name is Lauren Arnett. I am a computer programmer living in NYC interested in backend development. I'm currently in a batch at [Recurse Center](https://www.recurse.com/), where I'm focusing on studying Haskell, distributed systems, and SIMD parallelism. \n\n I also tutor programming to kids virtually and am happy to talk to new interested students!"
 
   mainSection = "posts" # your main section
-  showAllPostsOnHomePage = false # default
+  showAllPostsOnHomePage = true # default
   postsOnHomePage = 5 # this option will be ignored if showAllPostsOnHomePage is set to true
-  tagsOverview = true # show tags overview by default.
-  showProjectsList = true # show projects list by default (if projects data file exists).
+  tagsOverview = false # show tags overview by default.
+  showProjectsList = false # show projects list by default (if projects data file exists).
   projectsUrl = "https://github.com/gohugoio" # title link for projects list
 
   # https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
@@ -74,11 +73,25 @@ weight = 4
   # https://fontawesome.com/icons?d=gallery&s=brands
   [[params.social]]
     name = "github"
-    link = "https://github.com/gohugoio"
+    link = "https://github.com/laurenarnett"
   [[params.social]]
     name = "linkedin"
-    link = "https://www.linkedin.com/company/github/"
+    link = "https://www.linkedin.com/in/lauren-arnett-6ab037117/"
   [[params.social]]
     name = "email"
-    link = "example@example.com"  # no need for "mailto:" in the head
+    link = "lauren.arnett1@gmail.com"  # no need for "mailto:" in the head
 
+
+[privacy]
+  [privacy.disqus]
+    disable = true
+  [privacy.googleAnalytics]
+    disable = true
+  [privacy.instagram]
+    disable = true
+  [privacy.twitter]
+    disable = true
+  [privacy.vimeo]
+    disable = true
+  [privacy.youtube]
+    disable = true
