--- a/config.toml
+++ b/config.toml
@@ -64,6 +64,8 @@ weight = 4
 
   # Post page settings
   show_updated = false # default
+  # add math
+  mathjax = true
 
   [params.comments]
     enabled = false # default
