--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/cactus"]
 	path = themes/cactus
 	url = https://github.com/monkeyWzr/hugo-theme-cactus.git
-[submodule "gruvhugo"]
-	path = gruvhugo
+[submodule "themes/gruvhugo"]
+	path = themes/gruvhugo
 	url = https://gitlab.com/avron/gruvhugo.git
